test/bad/scope.spkt.expected
Error on line 17:
  Variable d not declared.
